# poke

./: .gitignore  CLAUDE.md  README.md  config.toml  poke.sh  pyproject.toml
src/poke/: client.py  config.py  controller.py  daemon.py  protocol.py
tests/: conftest.py  test_config.py  test_controller.py  test_hardware.py  test_protocol.py
udev/: 70-nxt.rules
