[project]
name = "poke"
version = "0.1.0"
description = "USB-driven LEGO NXT button-press rig for hardware testing"
requires-python = ">=3.11"
dependencies = [
    "nxt-python>=3.5.0",
    "pyusb>=1.2.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
poke = "poke.client:main"
poked = "poke.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poke"]
